gnome-initial-setup (3.24.2-1) UNRELEASED; urgency=medium

  * New upstream release

 -- Jeremy Bicha <jbicha@ubuntu.com>  Thu, 27 Jul 2017 17:16:52 -0400

gnome-initial-setup (3.22.1-1) unstable; urgency=medium

  * New upstream release.

 -- Laurent Bigonville <bigon@debian.org>  Tue, 06 Dec 2016 18:05:21 +0100

gnome-initial-setup (3.22.0-1) unstable; urgency=medium

  * New upstream release.
  * Bump debhelper compat to 10 (automatic autoreconf).
  * Set libexecdir to non-multiarch dir, following current practice.
  * Update Build-Depends as per configure.ac.
  * Explicitly enable the software sources page.
  * Refresh polkit-allow-NM.patch.
  * Avoid using full path to deluser in postrm script to quieten lintian.
  * Tweak copyright file to add some text to the public-domain block.

 -- Jordi Mallach <jordi@debian.org>  Sat, 24 Sep 2016 01:59:12 +0200

gnome-initial-setup (3.20.1-1) unstable; urgency=low

  [ Javier Martinez ]
  * Initial release  (Closes: #766388)

  [ Sjoerd Simons ]
  * debian/patches/pollkit-allow-NM.patch:
    - Added. Allow the gnome-initial-setup user to control the network

  [ Jordi Mallach ]
  * New upstream release.
  * Update Build-Depends as per configure.ac.
  * Add missing GPL-2+ license to copyright.
  * Add missing ${shlibs:Depends} substitution variable.
  * Add dependency on adduser.

  [ Jeremy Bicha ]
  * New upstream release. Update build-dependencies accordingly.
  * Use dh
  * Set Arch to linux-any since it needs gdm to build and run
  * Set libexecdir
  * Add to description and d/copyright

  [ Jordi Mallach ]
  * Add a pkla rules file for compat with policykit-1 < 0.106.

 -- Jordi Mallach <jordi@debian.org>  Wed, 03 Aug 2016 12:22:21 +0200