@@ -6,7 +6,7 @@ Source: gnome-initial-setup
 Section: gnome
 Priority: optional
 Maintainer: Debian GNOME Maintainers <pkg-gnome-maintainers@lists.alioth.debian.org>
-Uploaders: Jordi Mallach <jordi@debian.org>
+Uploaders: Jordi Mallach <jordi@debian.org>, Laurent Bigonville <bigon@debian.org>
 Build-Depends: debhelper (>= 10),
                geoclue-2.0 (>= 2.3.1),
                gnome-common,
@@ -28,9 +28,8 @@ Build-Depends: debhelper (>= 10),
                libibus-1.0-dev (>= 1.5.2),
                libjson-glib-dev,
                libkrb5-dev,
-               libnm-glib-dev (>= 0.9.6.4),
-               libnm-gtk-dev (>= 0.9.6.4),
-               libnm-util-dev (>= 0.9.6.4),
+               libnm-dev (>= 1.2),
+               libnma-dev (>= 1.0),
                libpackagekit-glib2-dev (>= 1.1.4),
                libpango1.0-dev (>= 1.32.5),
                libpolkit-gobject-1-dev (>= 0.103),
