@@ -1,6 +1,8 @@
 gnome-initial-setup (3.24.2-1) UNRELEASED; urgency=medium
 
   * New upstream release
+  * debian/control.in:
+    - Update NetworkManager related Build-Depends
 
  -- Jeremy Bicha <jbicha@ubuntu.com>  Thu, 27 Jul 2017 17:16:52 -0400
 
